<resources>
    <string name="action_comment">commented: %s</string>
    <string name="action_login">Log In</string>
    <string name="action_not_supported">Action Not Supported</string>
    <string name="action_register">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_task_completed">completed task:&#160;</string>
    <string name="action_task_uncompleted">marked task as uncompleted:&#160;</string>
    <string name="add_entry">Add entry</string>
    <string name="app_name">A Million Things To Do</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="bad_gateway">Bad Gateway</string>
    <string name="bad_request">Bad Request</string>
    <string name="cancel">Cancel</string>
    <string name="class_cast_exception">Class Cast Exception</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="concurrent_modification">Concurrent Modification</string>
    <string name="confirm">Confirm</string>
    <string name="connection_closed">Connection Closed</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_refused">Connection Refused</string>
    <string name="corrupted_data">Corrupted Data</string>
    <string name="database_error">Database Error</string>
    <string name="deadline_not_set">Not Set</string>
    <string name="default_task_count">0 / 0</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="error_code_message">Error code %s - %s%s</string>
    <string name="error_occurred">An error has occurred! -&#160;</string>
    <string name="exception_not_available">Error is not specified by server</string>
    <string name="expand">Expand</string>
    <string name="failed_to_create_entity">Failed To Create Entity</string>
    <string name="failed_to_delete_entity">Failed To Delete Entity</string>
    <string name="failed_to_read_entity">Failed To Read Entity</string>
    <string name="failed_to_update_entity">Failed To Update Entity</string>
    <string name="field_missing">Field Missing</string>
    <string name="forbidden">Forbidden</string>
    <string name="found">Found</string>
    <string name="gateway_timeout">Gateway Timeout</string>
    <string name="group_title">Title</string>
    <string name="group_title_label">Title</string>
    <string name="http_error">Http Error</string>
    <string name="http_version_not_supported">Http Version Not Supported</string>
    <string name="i_am_a_teapot">I Am A Teapot</string>
    <string name="illegal_email">Illegal Email</string>
    <string name="illegal_password">Illegal Password</string>
    <string name="illegal_username">Illegal Username</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="index_out_of_bounds">Index Out Of Bounds</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_json">Invalid Json</string>
    <string name="invalid_password">Password length must be not less than 6 and must contain only English letters, numbers and ASCII symbols</string>
    <string name="invalid_token">Invalid Login Token, try restarting the app</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="io_exception">IO Error</string>
    <string name="json_missing_field">Json Missing Field</string>
    <string name="json_non_nullable_value_is_null">Json Non Nullable Value Is Null</string>
    <string name="loading">Loading…</string>
    <string name="log_in">Log In</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_unknown_error">"Unknown Error"</string>
    <string name="login_token_failed">Login token is invalid, please log in manually.</string>
    <string name="logout">Log Out</string>
    <string name="loop_detected">Loop Detected</string>
    <string name="malformed_json">Malformed Json</string>
    <string name="math_error">Math Error</string>
    <string name="menu_group_view">Todo</string>
    <string name="method_not_allowed">Method Not Allowed</string>
    <string name="moved_permanently">Moved Permanently</string>
    <string name="multiple_choices">Multiple Choices</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle" />
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="not_acceptable">Not Acceptable</string>
    <string name="not_found">Not Found</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="null_context">Context is null!</string>
    <string name="null_pointer_exception">Null Pointer Exception</string>
    <string name="ok">OK</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="payload_too_large">Payload Too Large</string>
    <string name="press_back_again">Press back button again to exit the app!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="register_failed">Register Failed</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="request_uri_too_long">Request Uri Too Long</string>
    <string name="requested_entity_not_found">Requested Entity Not Found</string>
    <string name="resource_not_found">Resource not found</string>
    <string name="runtime_exception">Runtime Exception</string>
    <string name="service_error">Service Error</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="set_username">Set Username</string>
    <string name="socket_error">Socket Error</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_completed">Completed</string>
    <string name="status_in_plan">In Plan</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_not_started">Not Started</string>
    <string name="status_on_hold">On Hold</string>
    <string name="timed_out">Timed Out</string>
    <string name="title_activity_login">Log In</string>
    <string name="todo_action_history_text">Action History</string>
    <string name="todo_deadline_text">Deadline</string>
    <string name="todo_description">Todo Description</string>
    <string name="todo_description_text">Description</string>
    <string name="todo_status">Todo Status</string>
    <string name="todo_status_text">Status</string>
    <string name="todo_tasks_text">Tasks</string>
    <string name="todo_title">Title</string>
    <string name="todo_title_text">Title</string>
    <string name="token_expired">Login token expired. Please log in manually.</string>
    <string name="unauthorized">Unauthorized operation. Please restart the app and try again.</string>
    <string name="unknown_action">Unknown Action</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="unsupported_operation">Unsupported Operation</string>
    <string name="user_already_exists">User Already Exists</string>
    <string name="user_count">User Count</string>
    <string name="user_not_found">User Not Found</string>
    <string name="welcome">Welcome!</string>
    <string name="edit_work_group">Edit Work Group</string>
    <string name="illegal_arguments">Illegal Arguments</string>
    <string name="delete">Delete</string>
    <string name="remove">remove</string>
    <string name="user_settings">User Settings</string>
    <string name="change_username">Change Username</string>
    <string name="general_settings">General</string>
    <string name="night_mode">Night Mode</string>
    <string name="change_pfp">Change your user avatar</string>
    <string name="dark_ui">Use darker UI theme</string>
    <string name="app_lang_desc">Change the application language</string>
    <string name="language">Language</string>
    <string name="language_default">System Default</string>
    <string name="login_required">Login Required</string>
    <string name="username_changed">Username changed to %s, please restart the app to see the changes</string>
    <string name="email_changed">Email changed to %s, please restart the app to see the changes</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_summary">Change your password</string>
    <string name="password_changed">Password changed, please log in again.</string>
    <string name="add_work_group">Create Work Group</string>
    <string name="remove_work_group_confirm">Do you really want to remove this work group? This cannot be undone.</string>
    <string name="remove_work_group">Remove Work Group</string>
    <string name="action_type">Action Type</string>
    <string name="change_status">changed status from</string>
    <string name="change_status_to">to</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="unauthorized_operation">Your login session has expired, please restart the app and try again.</string>
    <string name="action_task_added">Added task:</string>
    <string name="action_task_removed">Removed task:</string>
    <string name="collapse">Collapse</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="edit_task">Edit Task</string>
    <string name="action_task_edited">renamed task %s to %s</string>
    <string name="change_deadline">changed deadline from %s to %s</string>
    <string name="remove_task">Remove Task</string>
    <string name="remove_task_confirm">Do you really want to remove this task? This cannot be undone.</string>
    <string name="change_title">changed title from</string>
    <string name="change_description">changed description from</string>
    <string name="edit_todo_title">Edit Todo Title</string>
    <string name="edit_todo_description">Edit Todo Description</string>
    <string name="insufficient_permission">Insufficient Permission</string>
    <string name="leave_work_group">Leave Work Group</string>
    <string name="leave_work_group_confirm">Do you really want to leave this work group?</string>
    <string name="leave">Leave</string>
    <string name="work_group_edit_no_permission">Only work group leaders can edit work groups!</string>
    <string name="operation">Operation</string>
    <string name="create_group">Create Work Group</string>
    <string name="join_group">Join Work Group</string>
    <string name="join_work_group">Join Work Group</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="action_share_workgroup">Share Work Group</string>
    <string name="invitation_qr_code">Invitation QR Code</string>
    <string name="copy_to_clipboard">Copy To Clipboard</string>
    <string name="expiration_time_days">Expiration Time (Days)</string>
    <string name="_1_day">1 Day</string>
    <string name="days">&#160;Days</string>
    <string name="day">&#160;Day</string>
    <string name="amttd_invitation_code">AMTTD Invitation Code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="requested_entity_invalid">Requested Entity Invalid</string>
    <string name="unique_id_conflict">Unique ID Conflict</string>
    <string name="already_in_workgroup">You are already in this work group!</string>
    <string name="scan_qr_code">Scan QR Code</string>
</resources>