<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/user_settings"
            app:iconSpaceReserved="false">

        <EditTextPreference
                app:key="username"
                app:title="@string/change_username"
                app:iconSpaceReserved="false"
                app:persistent="false"
                app:useSimpleSummaryProvider="true" />
        <EditTextPreference
                app:key="email"
                app:title="@string/change_email"
                app:iconSpaceReserved="false"
                app:persistent="false"
                app:useSimpleSummaryProvider="true" />
        <EditTextPreference
                app:key="password"
                app:title="@string/change_password"
                app:iconSpaceReserved="false"
                app:persistent="false"
                app:summary="@string/change_password_summary" />

        <Preference
                app:title="Profile Picture"
                app:summary="@string/change_pfp"
                app:iconSpaceReserved="false"
                app:persistent="false"
                app:key="profilePicture" />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/general_settings"
            app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
                app:key="night_mode"
                app:summary="@string/dark_ui"
                app:iconSpaceReserved="false"
                app:title="@string/night_mode" />

        <ListPreference
                app:key="language"
                app:useSimpleSummaryProvider="true"
                app:defaultValue="default"
                app:title="@string/language"
                app:iconSpaceReserved="false"
                app:entries="@array/language_entries"
                app:entryValues="@array/language_values" />

    </PreferenceCategory>

</PreferenceScreen>