<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_group_view"
                android:icon="@drawable/ic_baseline_home_24"
                android:iconTint="@color/black"
                android:title="@string/menu_group_view" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/action_settings" />
    </group>

    <group
            android:checkableBehavior="all"
            android:id="@+id/allSelectable">
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/logout" />
    </group>
</menu>