<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:minWidth="400dp"
        android:layout_height="match_parent"
        tools:context=".ui.share.WorkGroupShareActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_code"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/textInvitationCodeTitle" />

    <TextView
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textInvitationCode"
            android:textSize="24sp"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInvitationCodeTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/invitationQrCode"
            android:src="@drawable/ic_baseline_qr_code_24"
            app:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInvitationCode"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/invitation_qr_code" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:background="?android:selectableItemBackgroundBorderless"
            android:id="@+id/copyButton"
            android:contentDescription="@string/copy_to_clipboard"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:tint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInvitationCode"
            app:layout_constraintBottom_toBottomOf="@+id/textInvitationCode" />

    <Button
            android:text="@string/confirm"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmButton"
            app:layout_constraintTop_toBottomOf="@+id/invitationQrCode"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

</androidx.constraintlayout.widget.ConstraintLayout>