<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dp"
            app:riv_border_color="@android:color/white"
            android:scaleType="fitCenter"
            android:src="@mipmap/default_avatar"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/headerImageView" />

    <TextView
            android:id="@+id/headerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/not_logged_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
            android:id="@+id/headerSubtitle"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
</LinearLayout>