<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/todoEditSwipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/todo_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/todo_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:id="@+id/todoEditTitleText"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="8dp" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/todo_description"
                    android:textSize="16sp"
                    android:autofillHints="@string/todo_description"
                    android:id="@+id/todoEditDescriptionText"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/todoTaskItemView"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:text="@string/todo_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp" />

            <TextView
                    android:text="@string/todo_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/todoEditTitleText"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:text="@string/todo_tasks_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/todoEditDescriptionText"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:text="@string/todo_deadline_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/todoTaskItemView"
                    android:layout_marginTop="8dp" />

            <Button
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addTaskButton"
                    android:textColor="@color/primary"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:textSize="14sp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" />

            <TextView
                    android:text="@string/todo_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:text="@string/todo_action_history_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                    android:layout_marginTop="8dp" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/relativeLayout2">

                <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/circle"
                        android:id="@+id/todoEditIconColor"
                        android:layout_marginStart="8dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/todo_status"
                        app:tint="@color/primary" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/todoEditIconColor"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:id="@+id/todoEditStatusText"
                        android:text="@string/loading"
                        tools:ignore="RelativeOverlap" />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_gravity="end"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/todoEditStatusEditButton"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        tools:ignore="RelativeOverlap"
                        android:contentDescription="@string/edit"
                        android:src="@drawable/ic_baseline_edit_24"
                        android:clickable="true"
                        android:tint="@color/primary"
                        android:background="?android:selectableItemBackgroundBorderless" />
            </RelativeLayout>

            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/relativeLayout">

                <TextView
                        android:text="@string/deadline_not_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_alignParentStart="true"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/todoEditDeadlineText"
                        android:layout_gravity="start"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="8dp"
                        tools:ignore="RelativeOverlap" />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/todoEditDeadlineEditButton"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        tools:ignore="RelativeOverlap"
                        android:contentDescription="@string/edit"
                        android:src="@drawable/ic_baseline_edit_24"
                        android:tint="@color/primary"
                        android:background="?android:selectableItemBackgroundBorderless" />
            </RelativeLayout>

            <Button
                    android:text="@string/expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actionExpandButton"
                    android:textColor="@color/primary"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/actionHistoryLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>